kubernetes/apps/flux-system/addons/webhooks/github/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-flux-webhook
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: nginx-external
            io.kubernetes.pod.namespace: ingress
      toPorts:
        - ports:
            - port: "9292"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: adguard
            app.kubernetes.io/name: adguard-home
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
